log/build_2025-04-07_07-33-07/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishimu.py", line 35
    command.data input("imu test: ")
                 ^^^^^
SyntaxError: invalid syntax

